src/tools/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> input
Rule 1     input -> input mainmenu_stmt
Rule 2     input -> input config_stmt
Rule 3     input -> input menu_stmt
Rule 4     input -> input if_stmt
Rule 5     input -> input choice_stmt
Rule 6     input -> input groupend_stmt
Rule 7     input -> input comment_stmt
Rule 8     input -> input source_stmt
Rule 9     input -> input type_stmt
Rule 10    input -> input depends_stmt
Rule 11    input -> input select_imply_stmt
Rule 12    input -> input prompt_stmt
Rule 13    input -> input default_stmt
Rule 14    input -> input help_stmt
Rule 15    input -> input range_stmt
Rule 16    input -> input visible_stmt
Rule 17    input -> input modules_stmt
Rule 18    input -> input optional_stmt
Rule 19    input -> input path_stmt
Rule 20    input -> input endpath_stmt
Rule 21    input -> empty
Rule 22    path_stmt -> PATH QUOTE_WORD EOL
Rule 23    endpath_stmt -> ENDPATH EOL
Rule 24    mainmenu_stmt -> MAINMENU QUOTE_WORD EOL
Rule 25    config_stmt -> CONFIG WORD EOL
Rule 26    config_stmt -> MENUCONFIG WORD EOL
Rule 27    comment_stmt -> COMMENT QUOTE_WORD EOL
Rule 28    menu_stmt -> MENU QUOTE_WORD EOL
Rule 29    if_stmt -> IF expr EOL
Rule 30    choice_stmt -> CHOICE WORD EOL
Rule 31    choice_stmt -> CHOICE EOL
Rule 32    groupend_stmt -> ENDMENU EOL
Rule 33    groupend_stmt -> ENDIF EOL
Rule 34    groupend_stmt -> ENDCHOICE EOL
Rule 35    prompt_stmt_opt -> QUOTE_WORD if_expr
Rule 36    prompt_stmt_opt -> empty
Rule 37    type_stmt -> INT prompt_stmt_opt EOL
Rule 38    type_stmt -> HEX prompt_stmt_opt EOL
Rule 39    type_stmt -> STRING prompt_stmt_opt EOL
Rule 40    type_stmt -> BOOL prompt_stmt_opt EOL
Rule 41    type_stmt -> TRISTATE prompt_stmt_opt EOL
Rule 42    prompt_stmt -> PROMPT QUOTE_WORD if_expr EOL
Rule 43    help_stmt -> HELP HELP_CONTEXT EOL
Rule 44    help_stmt -> HELP HELP_CONTEXT
Rule 45    depends_stmt -> DEPENDS ON expr EOL
Rule 46    select_imply_stmt -> SELECT QUOTE_WORD if_expr EOL
Rule 47    select_imply_stmt -> SELECT WORD if_expr EOL
Rule 48    select_imply_stmt -> IMPLY WORD if_expr EOL
Rule 49    range_stmt -> RANGE symbol symbol if_expr EOL
Rule 50    optional_stmt -> OPTIONAL EOL
Rule 51    default_stmt -> DEFAULT expr if_expr EOL
Rule 52    default_stmt -> DEF_BOOL expr if_expr EOL
Rule 53    default_stmt -> DEF_TRISTATE expr if_expr EOL
Rule 54    visible_stmt -> VISIBILE if_expr EOL
Rule 55    modules_stmt -> MODULES EOL
Rule 56    source_stmt -> SOURCE QUOTE_WORD EOL
Rule 57    symbol -> WORD
Rule 58    symbol -> QUOTE_WORD
Rule 59    symbol -> SP_WORD
Rule 60    if_expr -> IF expr
Rule 61    if_expr -> empty
Rule 62    expr -> symbol
Rule 63    expr -> symbol LESS symbol
Rule 64    expr -> symbol LESS_EQUAL symbol
Rule 65    expr -> symbol GREATER symbol
Rule 66    expr -> symbol GREATER_EQUAL symbol
Rule 67    expr -> symbol EQUAL symbol
Rule 68    expr -> symbol UNEQUAL symbol
Rule 69    expr -> NOT expr
Rule 70    expr -> OPEN_PARENT expr CLOSE_PARENT
Rule 71    expr -> expr OR expr
Rule 72    expr -> expr AND expr
Rule 73    empty -> <empty>

Terminals, with rules where they appear

AND                  : 72
BOOL                 : 40
CHOICE               : 30 31
CLOSE_PARENT         : 70
COMMENT              : 27
CONFIG               : 25
DEFAULT              : 51
DEF_BOOL             : 52
DEF_TRISTATE         : 53
DEPENDS              : 45
ENDCHOICE            : 34
ENDIF                : 33
ENDMENU              : 32
ENDPATH              : 23
EOL                  : 22 23 24 25 26 27 28 29 30 31 32 33 34 37 38 39 40 41 42 43 45 46 47 48 49 50 51 52 53 54 55 56
EQUAL                : 67
GREATER              : 65
GREATER_EQUAL        : 66
HELP                 : 43 44
HELP_CONTEXT         : 43 44
HEX                  : 38
IF                   : 29 60
IMPLY                : 48
INT                  : 37
LESS                 : 63
LESS_EQUAL           : 64
MAINMENU             : 24
MENU                 : 28
MENUCONFIG           : 26
MODULES              : 55
NOT                  : 69
ON                   : 45
OPEN_PARENT          : 70
OPTIONAL             : 50
OR                   : 71
PATH                 : 22
PROMPT               : 42
QUOTE_WORD           : 22 24 27 28 35 42 46 56 58
RANGE                : 49
SELECT               : 46 47
SOURCE               : 56
SP_WORD              : 59
STRING               : 39
TRISTATE             : 41
UNEQUAL              : 68
VISIBILE             : 54
WORD                 : 25 26 30 47 48 57
error                : 

Nonterminals, with rules where they appear

choice_stmt          : 5
comment_stmt         : 7
config_stmt          : 2
default_stmt         : 13
depends_stmt         : 10
empty                : 21 36 61
endpath_stmt         : 20
expr                 : 29 45 51 52 53 60 69 70 71 71 72 72
groupend_stmt        : 6
help_stmt            : 14
if_expr              : 35 42 46 47 48 49 51 52 53 54
if_stmt              : 4
input                : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 0
mainmenu_stmt        : 1
menu_stmt            : 3
modules_stmt         : 17
optional_stmt        : 18
path_stmt            : 19
prompt_stmt          : 12
prompt_stmt_opt      : 37 38 39 40 41
range_stmt           : 15
select_imply_stmt    : 11
source_stmt          : 8
symbol               : 49 49 62 63 63 64 64 65 65 66 66 67 67 68 68
type_stmt            : 9
visible_stmt         : 16

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> . input mainmenu_stmt
    (2) input -> . input config_stmt
    (3) input -> . input menu_stmt
    (4) input -> . input if_stmt
    (5) input -> . input choice_stmt
    (6) input -> . input groupend_stmt
    (7) input -> . input comment_stmt
    (8) input -> . input source_stmt
    (9) input -> . input type_stmt
    (10) input -> . input depends_stmt
    (11) input -> . input select_imply_stmt
    (12) input -> . input prompt_stmt
    (13) input -> . input default_stmt
    (14) input -> . input help_stmt
    (15) input -> . input range_stmt
    (16) input -> . input visible_stmt
    (17) input -> . input modules_stmt
    (18) input -> . input optional_stmt
    (19) input -> . input path_stmt
    (20) input -> . input endpath_stmt
    (21) input -> . empty
    (73) empty -> .

    MAINMENU        reduce using rule 73 (empty -> .)
    CONFIG          reduce using rule 73 (empty -> .)
    MENUCONFIG      reduce using rule 73 (empty -> .)
    MENU            reduce using rule 73 (empty -> .)
    IF              reduce using rule 73 (empty -> .)
    CHOICE          reduce using rule 73 (empty -> .)
    ENDMENU         reduce using rule 73 (empty -> .)
    ENDIF           reduce using rule 73 (empty -> .)
    ENDCHOICE       reduce using rule 73 (empty -> .)
    COMMENT         reduce using rule 73 (empty -> .)
    SOURCE          reduce using rule 73 (empty -> .)
    INT             reduce using rule 73 (empty -> .)
    HEX             reduce using rule 73 (empty -> .)
    STRING          reduce using rule 73 (empty -> .)
    BOOL            reduce using rule 73 (empty -> .)
    TRISTATE        reduce using rule 73 (empty -> .)
    DEPENDS         reduce using rule 73 (empty -> .)
    SELECT          reduce using rule 73 (empty -> .)
    IMPLY           reduce using rule 73 (empty -> .)
    PROMPT          reduce using rule 73 (empty -> .)
    DEFAULT         reduce using rule 73 (empty -> .)
    DEF_BOOL        reduce using rule 73 (empty -> .)
    DEF_TRISTATE    reduce using rule 73 (empty -> .)
    HELP            reduce using rule 73 (empty -> .)
    RANGE           reduce using rule 73 (empty -> .)
    VISIBILE        reduce using rule 73 (empty -> .)
    MODULES         reduce using rule 73 (empty -> .)
    OPTIONAL        reduce using rule 73 (empty -> .)
    PATH            reduce using rule 73 (empty -> .)
    ENDPATH         reduce using rule 73 (empty -> .)
    $end            reduce using rule 73 (empty -> .)

    input                          shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> input .
    (1) input -> input . mainmenu_stmt
    (2) input -> input . config_stmt
    (3) input -> input . menu_stmt
    (4) input -> input . if_stmt
    (5) input -> input . choice_stmt
    (6) input -> input . groupend_stmt
    (7) input -> input . comment_stmt
    (8) input -> input . source_stmt
    (9) input -> input . type_stmt
    (10) input -> input . depends_stmt
    (11) input -> input . select_imply_stmt
    (12) input -> input . prompt_stmt
    (13) input -> input . default_stmt
    (14) input -> input . help_stmt
    (15) input -> input . range_stmt
    (16) input -> input . visible_stmt
    (17) input -> input . modules_stmt
    (18) input -> input . optional_stmt
    (19) input -> input . path_stmt
    (20) input -> input . endpath_stmt
    (24) mainmenu_stmt -> . MAINMENU QUOTE_WORD EOL
    (25) config_stmt -> . CONFIG WORD EOL
    (26) config_stmt -> . MENUCONFIG WORD EOL
    (28) menu_stmt -> . MENU QUOTE_WORD EOL
    (29) if_stmt -> . IF expr EOL
    (30) choice_stmt -> . CHOICE WORD EOL
    (31) choice_stmt -> . CHOICE EOL
    (32) groupend_stmt -> . ENDMENU EOL
    (33) groupend_stmt -> . ENDIF EOL
    (34) groupend_stmt -> . ENDCHOICE EOL
    (27) comment_stmt -> . COMMENT QUOTE_WORD EOL
    (56) source_stmt -> . SOURCE QUOTE_WORD EOL
    (37) type_stmt -> . INT prompt_stmt_opt EOL
    (38) type_stmt -> . HEX prompt_stmt_opt EOL
    (39) type_stmt -> . STRING prompt_stmt_opt EOL
    (40) type_stmt -> . BOOL prompt_stmt_opt EOL
    (41) type_stmt -> . TRISTATE prompt_stmt_opt EOL
    (45) depends_stmt -> . DEPENDS ON expr EOL
    (46) select_imply_stmt -> . SELECT QUOTE_WORD if_expr EOL
    (47) select_imply_stmt -> . SELECT WORD if_expr EOL
    (48) select_imply_stmt -> . IMPLY WORD if_expr EOL
    (42) prompt_stmt -> . PROMPT QUOTE_WORD if_expr EOL
    (51) default_stmt -> . DEFAULT expr if_expr EOL
    (52) default_stmt -> . DEF_BOOL expr if_expr EOL
    (53) default_stmt -> . DEF_TRISTATE expr if_expr EOL
    (43) help_stmt -> . HELP HELP_CONTEXT EOL
    (44) help_stmt -> . HELP HELP_CONTEXT
    (49) range_stmt -> . RANGE symbol symbol if_expr EOL
    (54) visible_stmt -> . VISIBILE if_expr EOL
    (55) modules_stmt -> . MODULES EOL
    (50) optional_stmt -> . OPTIONAL EOL
    (22) path_stmt -> . PATH QUOTE_WORD EOL
    (23) endpath_stmt -> . ENDPATH EOL

    MAINMENU        shift and go to state 23
    CONFIG          shift and go to state 24
    MENUCONFIG      shift and go to state 25
    MENU            shift and go to state 26
    IF              shift and go to state 27
    CHOICE          shift and go to state 28
    ENDMENU         shift and go to state 29
    ENDIF           shift and go to state 30
    ENDCHOICE       shift and go to state 31
    COMMENT         shift and go to state 32
    SOURCE          shift and go to state 33
    INT             shift and go to state 34
    HEX             shift and go to state 35
    STRING          shift and go to state 36
    BOOL            shift and go to state 37
    TRISTATE        shift and go to state 38
    DEPENDS         shift and go to state 39
    SELECT          shift and go to state 40
    IMPLY           shift and go to state 41
    PROMPT          shift and go to state 42
    DEFAULT         shift and go to state 43
    DEF_BOOL        shift and go to state 44
    DEF_TRISTATE    shift and go to state 45
    HELP            shift and go to state 46
    RANGE           shift and go to state 47
    VISIBILE        shift and go to state 48
    MODULES         shift and go to state 49
    OPTIONAL        shift and go to state 50
    PATH            shift and go to state 51
    ENDPATH         shift and go to state 52

    mainmenu_stmt                  shift and go to state 3
    config_stmt                    shift and go to state 4
    menu_stmt                      shift and go to state 5
    if_stmt                        shift and go to state 6
    choice_stmt                    shift and go to state 7
    groupend_stmt                  shift and go to state 8
    comment_stmt                   shift and go to state 9
    source_stmt                    shift and go to state 10
    type_stmt                      shift and go to state 11
    depends_stmt                   shift and go to state 12
    select_imply_stmt              shift and go to state 13
    prompt_stmt                    shift and go to state 14
    default_stmt                   shift and go to state 15
    help_stmt                      shift and go to state 16
    range_stmt                     shift and go to state 17
    visible_stmt                   shift and go to state 18
    modules_stmt                   shift and go to state 19
    optional_stmt                  shift and go to state 20
    path_stmt                      shift and go to state 21
    endpath_stmt                   shift and go to state 22

state 2

    (21) input -> empty .

    MAINMENU        reduce using rule 21 (input -> empty .)
    CONFIG          reduce using rule 21 (input -> empty .)
    MENUCONFIG      reduce using rule 21 (input -> empty .)
    MENU            reduce using rule 21 (input -> empty .)
    IF              reduce using rule 21 (input -> empty .)
    CHOICE          reduce using rule 21 (input -> empty .)
    ENDMENU         reduce using rule 21 (input -> empty .)
    ENDIF           reduce using rule 21 (input -> empty .)
    ENDCHOICE       reduce using rule 21 (input -> empty .)
    COMMENT         reduce using rule 21 (input -> empty .)
    SOURCE          reduce using rule 21 (input -> empty .)
    INT             reduce using rule 21 (input -> empty .)
    HEX             reduce using rule 21 (input -> empty .)
    STRING          reduce using rule 21 (input -> empty .)
    BOOL            reduce using rule 21 (input -> empty .)
    TRISTATE        reduce using rule 21 (input -> empty .)
    DEPENDS         reduce using rule 21 (input -> empty .)
    SELECT          reduce using rule 21 (input -> empty .)
    IMPLY           reduce using rule 21 (input -> empty .)
    PROMPT          reduce using rule 21 (input -> empty .)
    DEFAULT         reduce using rule 21 (input -> empty .)
    DEF_BOOL        reduce using rule 21 (input -> empty .)
    DEF_TRISTATE    reduce using rule 21 (input -> empty .)
    HELP            reduce using rule 21 (input -> empty .)
    RANGE           reduce using rule 21 (input -> empty .)
    VISIBILE        reduce using rule 21 (input -> empty .)
    MODULES         reduce using rule 21 (input -> empty .)
    OPTIONAL        reduce using rule 21 (input -> empty .)
    PATH            reduce using rule 21 (input -> empty .)
    ENDPATH         reduce using rule 21 (input -> empty .)
    $end            reduce using rule 21 (input -> empty .)


state 3

    (1) input -> input mainmenu_stmt .

    MAINMENU        reduce using rule 1 (input -> input mainmenu_stmt .)
    CONFIG          reduce using rule 1 (input -> input mainmenu_stmt .)
    MENUCONFIG      reduce using rule 1 (input -> input mainmenu_stmt .)
    MENU            reduce using rule 1 (input -> input mainmenu_stmt .)
    IF              reduce using rule 1 (input -> input mainmenu_stmt .)
    CHOICE          reduce using rule 1 (input -> input mainmenu_stmt .)
    ENDMENU         reduce using rule 1 (input -> input mainmenu_stmt .)
    ENDIF           reduce using rule 1 (input -> input mainmenu_stmt .)
    ENDCHOICE       reduce using rule 1 (input -> input mainmenu_stmt .)
    COMMENT         reduce using rule 1 (input -> input mainmenu_stmt .)
    SOURCE          reduce using rule 1 (input -> input mainmenu_stmt .)
    INT             reduce using rule 1 (input -> input mainmenu_stmt .)
    HEX             reduce using rule 1 (input -> input mainmenu_stmt .)
    STRING          reduce using rule 1 (input -> input mainmenu_stmt .)
    BOOL            reduce using rule 1 (input -> input mainmenu_stmt .)
    TRISTATE        reduce using rule 1 (input -> input mainmenu_stmt .)
    DEPENDS         reduce using rule 1 (input -> input mainmenu_stmt .)
    SELECT          reduce using rule 1 (input -> input mainmenu_stmt .)
    IMPLY           reduce using rule 1 (input -> input mainmenu_stmt .)
    PROMPT          reduce using rule 1 (input -> input mainmenu_stmt .)
    DEFAULT         reduce using rule 1 (input -> input mainmenu_stmt .)
    DEF_BOOL        reduce using rule 1 (input -> input mainmenu_stmt .)
    DEF_TRISTATE    reduce using rule 1 (input -> input mainmenu_stmt .)
    HELP            reduce using rule 1 (input -> input mainmenu_stmt .)
    RANGE           reduce using rule 1 (input -> input mainmenu_stmt .)
    VISIBILE        reduce using rule 1 (input -> input mainmenu_stmt .)
    MODULES         reduce using rule 1 (input -> input mainmenu_stmt .)
    OPTIONAL        reduce using rule 1 (input -> input mainmenu_stmt .)
    PATH            reduce using rule 1 (input -> input mainmenu_stmt .)
    ENDPATH         reduce using rule 1 (input -> input mainmenu_stmt .)
    $end            reduce using rule 1 (input -> input mainmenu_stmt .)


state 4

    (2) input -> input config_stmt .

    MAINMENU        reduce using rule 2 (input -> input config_stmt .)
    CONFIG          reduce using rule 2 (input -> input config_stmt .)
    MENUCONFIG      reduce using rule 2 (input -> input config_stmt .)
    MENU            reduce using rule 2 (input -> input config_stmt .)
    IF              reduce using rule 2 (input -> input config_stmt .)
    CHOICE          reduce using rule 2 (input -> input config_stmt .)
    ENDMENU         reduce using rule 2 (input -> input config_stmt .)
    ENDIF           reduce using rule 2 (input -> input config_stmt .)
    ENDCHOICE       reduce using rule 2 (input -> input config_stmt .)
    COMMENT         reduce using rule 2 (input -> input config_stmt .)
    SOURCE          reduce using rule 2 (input -> input config_stmt .)
    INT             reduce using rule 2 (input -> input config_stmt .)
    HEX             reduce using rule 2 (input -> input config_stmt .)
    STRING          reduce using rule 2 (input -> input config_stmt .)
    BOOL            reduce using rule 2 (input -> input config_stmt .)
    TRISTATE        reduce using rule 2 (input -> input config_stmt .)
    DEPENDS         reduce using rule 2 (input -> input config_stmt .)
    SELECT          reduce using rule 2 (input -> input config_stmt .)
    IMPLY           reduce using rule 2 (input -> input config_stmt .)
    PROMPT          reduce using rule 2 (input -> input config_stmt .)
    DEFAULT         reduce using rule 2 (input -> input config_stmt .)
    DEF_BOOL        reduce using rule 2 (input -> input config_stmt .)
    DEF_TRISTATE    reduce using rule 2 (input -> input config_stmt .)
    HELP            reduce using rule 2 (input -> input config_stmt .)
    RANGE           reduce using rule 2 (input -> input config_stmt .)
    VISIBILE        reduce using rule 2 (input -> input config_stmt .)
    MODULES         reduce using rule 2 (input -> input config_stmt .)
    OPTIONAL        reduce using rule 2 (input -> input config_stmt .)
    PATH            reduce using rule 2 (input -> input config_stmt .)
    ENDPATH         reduce using rule 2 (input -> input config_stmt .)
    $end            reduce using rule 2 (input -> input config_stmt .)


state 5

    (3) input -> input menu_stmt .

    MAINMENU        reduce using rule 3 (input -> input menu_stmt .)
    CONFIG          reduce using rule 3 (input -> input menu_stmt .)
    MENUCONFIG      reduce using rule 3 (input -> input menu_stmt .)
    MENU            reduce using rule 3 (input -> input menu_stmt .)
    IF              reduce using rule 3 (input -> input menu_stmt .)
    CHOICE          reduce using rule 3 (input -> input menu_stmt .)
    ENDMENU         reduce using rule 3 (input -> input menu_stmt .)
    ENDIF           reduce using rule 3 (input -> input menu_stmt .)
    ENDCHOICE       reduce using rule 3 (input -> input menu_stmt .)
    COMMENT         reduce using rule 3 (input -> input menu_stmt .)
    SOURCE          reduce using rule 3 (input -> input menu_stmt .)
    INT             reduce using rule 3 (input -> input menu_stmt .)
    HEX             reduce using rule 3 (input -> input menu_stmt .)
    STRING          reduce using rule 3 (input -> input menu_stmt .)
    BOOL            reduce using rule 3 (input -> input menu_stmt .)
    TRISTATE        reduce using rule 3 (input -> input menu_stmt .)
    DEPENDS         reduce using rule 3 (input -> input menu_stmt .)
    SELECT          reduce using rule 3 (input -> input menu_stmt .)
    IMPLY           reduce using rule 3 (input -> input menu_stmt .)
    PROMPT          reduce using rule 3 (input -> input menu_stmt .)
    DEFAULT         reduce using rule 3 (input -> input menu_stmt .)
    DEF_BOOL        reduce using rule 3 (input -> input menu_stmt .)
    DEF_TRISTATE    reduce using rule 3 (input -> input menu_stmt .)
    HELP            reduce using rule 3 (input -> input menu_stmt .)
    RANGE           reduce using rule 3 (input -> input menu_stmt .)
    VISIBILE        reduce using rule 3 (input -> input menu_stmt .)
    MODULES         reduce using rule 3 (input -> input menu_stmt .)
    OPTIONAL        reduce using rule 3 (input -> input menu_stmt .)
    PATH            reduce using rule 3 (input -> input menu_stmt .)
    ENDPATH         reduce using rule 3 (input -> input menu_stmt .)
    $end            reduce using rule 3 (input -> input menu_stmt .)


state 6

    (4) input -> input if_stmt .

    MAINMENU        reduce using rule 4 (input -> input if_stmt .)
    CONFIG          reduce using rule 4 (input -> input if_stmt .)
    MENUCONFIG      reduce using rule 4 (input -> input if_stmt .)
    MENU            reduce using rule 4 (input -> input if_stmt .)
    IF              reduce using rule 4 (input -> input if_stmt .)
    CHOICE          reduce using rule 4 (input -> input if_stmt .)
    ENDMENU         reduce using rule 4 (input -> input if_stmt .)
    ENDIF           reduce using rule 4 (input -> input if_stmt .)
    ENDCHOICE       reduce using rule 4 (input -> input if_stmt .)
    COMMENT         reduce using rule 4 (input -> input if_stmt .)
    SOURCE          reduce using rule 4 (input -> input if_stmt .)
    INT             reduce using rule 4 (input -> input if_stmt .)
    HEX             reduce using rule 4 (input -> input if_stmt .)
    STRING          reduce using rule 4 (input -> input if_stmt .)
    BOOL            reduce using rule 4 (input -> input if_stmt .)
    TRISTATE        reduce using rule 4 (input -> input if_stmt .)
    DEPENDS         reduce using rule 4 (input -> input if_stmt .)
    SELECT          reduce using rule 4 (input -> input if_stmt .)
    IMPLY           reduce using rule 4 (input -> input if_stmt .)
    PROMPT          reduce using rule 4 (input -> input if_stmt .)
    DEFAULT         reduce using rule 4 (input -> input if_stmt .)
    DEF_BOOL        reduce using rule 4 (input -> input if_stmt .)
    DEF_TRISTATE    reduce using rule 4 (input -> input if_stmt .)
    HELP            reduce using rule 4 (input -> input if_stmt .)
    RANGE           reduce using rule 4 (input -> input if_stmt .)
    VISIBILE        reduce using rule 4 (input -> input if_stmt .)
    MODULES         reduce using rule 4 (input -> input if_stmt .)
    OPTIONAL        reduce using rule 4 (input -> input if_stmt .)
    PATH            reduce using rule 4 (input -> input if_stmt .)
    ENDPATH         reduce using rule 4 (input -> input if_stmt .)
    $end            reduce using rule 4 (input -> input if_stmt .)


state 7

    (5) input -> input choice_stmt .

    MAINMENU        reduce using rule 5 (input -> input choice_stmt .)
    CONFIG          reduce using rule 5 (input -> input choice_stmt .)
    MENUCONFIG      reduce using rule 5 (input -> input choice_stmt .)
    MENU            reduce using rule 5 (input -> input choice_stmt .)
    IF              reduce using rule 5 (input -> input choice_stmt .)
    CHOICE          reduce using rule 5 (input -> input choice_stmt .)
    ENDMENU         reduce using rule 5 (input -> input choice_stmt .)
    ENDIF           reduce using rule 5 (input -> input choice_stmt .)
    ENDCHOICE       reduce using rule 5 (input -> input choice_stmt .)
    COMMENT         reduce using rule 5 (input -> input choice_stmt .)
    SOURCE          reduce using rule 5 (input -> input choice_stmt .)
    INT             reduce using rule 5 (input -> input choice_stmt .)
    HEX             reduce using rule 5 (input -> input choice_stmt .)
    STRING          reduce using rule 5 (input -> input choice_stmt .)
    BOOL            reduce using rule 5 (input -> input choice_stmt .)
    TRISTATE        reduce using rule 5 (input -> input choice_stmt .)
    DEPENDS         reduce using rule 5 (input -> input choice_stmt .)
    SELECT          reduce using rule 5 (input -> input choice_stmt .)
    IMPLY           reduce using rule 5 (input -> input choice_stmt .)
    PROMPT          reduce using rule 5 (input -> input choice_stmt .)
    DEFAULT         reduce using rule 5 (input -> input choice_stmt .)
    DEF_BOOL        reduce using rule 5 (input -> input choice_stmt .)
    DEF_TRISTATE    reduce using rule 5 (input -> input choice_stmt .)
    HELP            reduce using rule 5 (input -> input choice_stmt .)
    RANGE           reduce using rule 5 (input -> input choice_stmt .)
    VISIBILE        reduce using rule 5 (input -> input choice_stmt .)
    MODULES         reduce using rule 5 (input -> input choice_stmt .)
    OPTIONAL        reduce using rule 5 (input -> input choice_stmt .)
    PATH            reduce using rule 5 (input -> input choice_stmt .)
    ENDPATH         reduce using rule 5 (input -> input choice_stmt .)
    $end            reduce using rule 5 (input -> input choice_stmt .)


state 8

    (6) input -> input groupend_stmt .

    MAINMENU        reduce using rule 6 (input -> input groupend_stmt .)
    CONFIG          reduce using rule 6 (input -> input groupend_stmt .)
    MENUCONFIG      reduce using rule 6 (input -> input groupend_stmt .)
    MENU            reduce using rule 6 (input -> input groupend_stmt .)
    IF              reduce using rule 6 (input -> input groupend_stmt .)
    CHOICE          reduce using rule 6 (input -> input groupend_stmt .)
    ENDMENU         reduce using rule 6 (input -> input groupend_stmt .)
    ENDIF           reduce using rule 6 (input -> input groupend_stmt .)
    ENDCHOICE       reduce using rule 6 (input -> input groupend_stmt .)
    COMMENT         reduce using rule 6 (input -> input groupend_stmt .)
    SOURCE          reduce using rule 6 (input -> input groupend_stmt .)
    INT             reduce using rule 6 (input -> input groupend_stmt .)
    HEX             reduce using rule 6 (input -> input groupend_stmt .)
    STRING          reduce using rule 6 (input -> input groupend_stmt .)
    BOOL            reduce using rule 6 (input -> input groupend_stmt .)
    TRISTATE        reduce using rule 6 (input -> input groupend_stmt .)
    DEPENDS         reduce using rule 6 (input -> input groupend_stmt .)
    SELECT          reduce using rule 6 (input -> input groupend_stmt .)
    IMPLY           reduce using rule 6 (input -> input groupend_stmt .)
    PROMPT          reduce using rule 6 (input -> input groupend_stmt .)
    DEFAULT         reduce using rule 6 (input -> input groupend_stmt .)
    DEF_BOOL        reduce using rule 6 (input -> input groupend_stmt .)
    DEF_TRISTATE    reduce using rule 6 (input -> input groupend_stmt .)
    HELP            reduce using rule 6 (input -> input groupend_stmt .)
    RANGE           reduce using rule 6 (input -> input groupend_stmt .)
    VISIBILE        reduce using rule 6 (input -> input groupend_stmt .)
    MODULES         reduce using rule 6 (input -> input groupend_stmt .)
    OPTIONAL        reduce using rule 6 (input -> input groupend_stmt .)
    PATH            reduce using rule 6 (input -> input groupend_stmt .)
    ENDPATH         reduce using rule 6 (input -> input groupend_stmt .)
    $end            reduce using rule 6 (input -> input groupend_stmt .)


state 9

    (7) input -> input comment_stmt .

    MAINMENU        reduce using rule 7 (input -> input comment_stmt .)
    CONFIG          reduce using rule 7 (input -> input comment_stmt .)
    MENUCONFIG      reduce using rule 7 (input -> input comment_stmt .)
    MENU            reduce using rule 7 (input -> input comment_stmt .)
    IF              reduce using rule 7 (input -> input comment_stmt .)
    CHOICE          reduce using rule 7 (input -> input comment_stmt .)
    ENDMENU         reduce using rule 7 (input -> input comment_stmt .)
    ENDIF           reduce using rule 7 (input -> input comment_stmt .)
    ENDCHOICE       reduce using rule 7 (input -> input comment_stmt .)
    COMMENT         reduce using rule 7 (input -> input comment_stmt .)
    SOURCE          reduce using rule 7 (input -> input comment_stmt .)
    INT             reduce using rule 7 (input -> input comment_stmt .)
    HEX             reduce using rule 7 (input -> input comment_stmt .)
    STRING          reduce using rule 7 (input -> input comment_stmt .)
    BOOL            reduce using rule 7 (input -> input comment_stmt .)
    TRISTATE        reduce using rule 7 (input -> input comment_stmt .)
    DEPENDS         reduce using rule 7 (input -> input comment_stmt .)
    SELECT          reduce using rule 7 (input -> input comment_stmt .)
    IMPLY           reduce using rule 7 (input -> input comment_stmt .)
    PROMPT          reduce using rule 7 (input -> input comment_stmt .)
    DEFAULT         reduce using rule 7 (input -> input comment_stmt .)
    DEF_BOOL        reduce using rule 7 (input -> input comment_stmt .)
    DEF_TRISTATE    reduce using rule 7 (input -> input comment_stmt .)
    HELP            reduce using rule 7 (input -> input comment_stmt .)
    RANGE           reduce using rule 7 (input -> input comment_stmt .)
    VISIBILE        reduce using rule 7 (input -> input comment_stmt .)
    MODULES         reduce using rule 7 (input -> input comment_stmt .)
    OPTIONAL        reduce using rule 7 (input -> input comment_stmt .)
    PATH            reduce using rule 7 (input -> input comment_stmt .)
    ENDPATH         reduce using rule 7 (input -> input comment_stmt .)
    $end            reduce using rule 7 (input -> input comment_stmt .)


state 10

    (8) input -> input source_stmt .

    MAINMENU        reduce using rule 8 (input -> input source_stmt .)
    CONFIG          reduce using rule 8 (input -> input source_stmt .)
    MENUCONFIG      reduce using rule 8 (input -> input source_stmt .)
    MENU            reduce using rule 8 (input -> input source_stmt .)
    IF              reduce using rule 8 (input -> input source_stmt .)
    CHOICE          reduce using rule 8 (input -> input source_stmt .)
    ENDMENU         reduce using rule 8 (input -> input source_stmt .)
    ENDIF           reduce using rule 8 (input -> input source_stmt .)
    ENDCHOICE       reduce using rule 8 (input -> input source_stmt .)
    COMMENT         reduce using rule 8 (input -> input source_stmt .)
    SOURCE          reduce using rule 8 (input -> input source_stmt .)
    INT             reduce using rule 8 (input -> input source_stmt .)
    HEX             reduce using rule 8 (input -> input source_stmt .)
    STRING          reduce using rule 8 (input -> input source_stmt .)
    BOOL            reduce using rule 8 (input -> input source_stmt .)
    TRISTATE        reduce using rule 8 (input -> input source_stmt .)
    DEPENDS         reduce using rule 8 (input -> input source_stmt .)
    SELECT          reduce using rule 8 (input -> input source_stmt .)
    IMPLY           reduce using rule 8 (input -> input source_stmt .)
    PROMPT          reduce using rule 8 (input -> input source_stmt .)
    DEFAULT         reduce using rule 8 (input -> input source_stmt .)
    DEF_BOOL        reduce using rule 8 (input -> input source_stmt .)
    DEF_TRISTATE    reduce using rule 8 (input -> input source_stmt .)
    HELP            reduce using rule 8 (input -> input source_stmt .)
    RANGE           reduce using rule 8 (input -> input source_stmt .)
    VISIBILE        reduce using rule 8 (input -> input source_stmt .)
    MODULES         reduce using rule 8 (input -> input source_stmt .)
    OPTIONAL        reduce using rule 8 (input -> input source_stmt .)
    PATH            reduce using rule 8 (input -> input source_stmt .)
    ENDPATH         reduce using rule 8 (input -> input source_stmt .)
    $end            reduce using rule 8 (input -> input source_stmt .)


state 11

    (9) input -> input type_stmt .
